1.0.8
- allow marking movies

1.0.7
- 

1.0.6
- allow marking episode when in file mode

1.0.5
- change name, api key and add data on ua

1.0.4
- rename plugin because of conflict with subtitles addon

1.0.3
- add import of simplejson module

1.0.2
- fix notification icon

1.0.1
- bug fixes, new notification option, code cleanup

1.0.0
- initial release